--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ bind-key C-a send-prefix
 set -g default-terminal "xterm-256color"
 
 # split panes using \ and -
-bind \ split-window -h
+bind \\ split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
