--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,8 +7,8 @@ bind-key C-a send-prefix
 set -g default-terminal "xterm-256color"
 
 # split panes using \ and -
-bind \ split-window -h
-bind - split-window -v
+bind-key \\ split-window -h
+bind-key - split-window -v
 unbind '"'
 unbind %
 
